Integration tests are passing

--- a/integration-tests/src/main/resources/application.properties
+++ b/integration-tests/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-quarkus.jca.artemis.config-properties.foo=bar
+quarkus.jca.artemis.config-properties.c=bar
 
 quarkus.index-dependency.artemis-ra.group-id=org.apache.activemq
 quarkus.index-dependency.artemis-ra.artifact-id=artemis-jakarta-ra
