--- a/runtime/pom.xml
+++ b/runtime/pom.xml
@@ -23,6 +23,11 @@
       <artifactId>quarkus-narayana-jta</artifactId>
     </dependency>
     <dependency>
+      <groupId>commons-beanutils</groupId>
+      <artifactId>commons-beanutils</artifactId>
+      <version>1.9.4</version>
+    </dependency>
+    <dependency>
       <groupId>jakarta.resource</groupId>
       <artifactId>jakarta.resource-api</artifactId>
       <version>2.1.0</version>
