--- a/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -1,9 +1,9 @@
-name: Jca
-#description: Do something useful.
+name: Java Connector Architecture (JCA)
+description: Java Connector Architecture (JCA) support for Quarkus
 metadata:
-#  keywords:
-#    - jca
-#  guide: https://quarkiverse.github.io/quarkiverse-docs/jca/dev/ # To create and publish this guide, see https://github.com/quarkiverse/quarkiverse/wiki#documenting-your-extension
-#  categories:
-#    - "miscellaneous"
-#  status: "preview"
+  keywords:
+    - jca
+  guide: https://docs.quarkiverse.io/quarkus-jca/dev/
+  categories:
+    - "miscellaneous"
+  status: "preview"
