--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -15,7 +15,7 @@
   <dependencies>
     <dependency>
       <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-resteasy</artifactId>
+      <artifactId>quarkus-resteasy-reactive</artifactId>
     </dependency>
     <dependency>
       <groupId>io.quarkiverse.jca</groupId>
