--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -28,6 +28,11 @@
       <version>2.30.0</version>
     </dependency>
     <dependency>
+      <groupId>org.apache.activemq</groupId>
+      <artifactId>artemis-hqclient-protocol</artifactId>
+      <version>2.30.0</version>
+    </dependency>
+    <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-junit5</artifactId>
       <scope>test</scope>
