--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -18,6 +18,14 @@
       <artifactId>quarkus-resteasy-reactive</artifactId>
     </dependency>
     <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-jdbc-postgresql</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-hibernate-orm</artifactId>
+    </dependency>
+    <dependency>
       <groupId>io.quarkiverse.jca</groupId>
       <artifactId>quarkus-jca</artifactId>
       <version>${project.version}</version>
