--- a/runtime/pom.xml
+++ b/runtime/pom.xml
@@ -27,6 +27,11 @@
       <artifactId>jakarta.resource-api</artifactId>
       <version>2.1.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.jboss.ironjacamar</groupId>
+      <artifactId>ironjacamar-core-impl</artifactId>
+      <version>3.0.4.Final</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
