--- a/deployment/pom.xml
+++ b/deployment/pom.xml
@@ -3,12 +3,12 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>io.quarkiverse.jca</groupId>
-    <artifactId>quarkus-jca-parent</artifactId>
+    <groupId>io.quarkiverse.ironjacamar</groupId>
+    <artifactId>quarkus-ironjacamar-parent</artifactId>
     <version>999-SNAPSHOT</version>
   </parent>
-  <artifactId>quarkus-jca-deployment</artifactId>
-  <name>Quarkus Jca - Deployment</name>
+  <artifactId>quarkus-ironjacamar-deployment</artifactId>
+  <name>Quarkus IronJacamar - Deployment</name>
   <dependencies>
     <dependency>
       <groupId>io.quarkus</groupId>
@@ -23,8 +23,8 @@
       <artifactId>quarkus-narayana-jta-deployment</artifactId>
     </dependency>
     <dependency>
-      <groupId>io.quarkiverse.jca</groupId>
-      <artifactId>quarkus-jca</artifactId>
+      <groupId>io.quarkiverse.ironjacamar</groupId>
+      <artifactId>quarkus-ironjacamar</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
