--- a/docs/pom.xml
+++ b/docs/pom.xml
@@ -4,20 +4,20 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>io.quarkiverse.jca</groupId>
-        <artifactId>quarkus-jca-parent</artifactId>
+        <groupId>io.quarkiverse.ironjacamar</groupId>
+        <artifactId>quarkus-ironjacamar-parent</artifactId>
         <version>999-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>quarkus-jca-docs</artifactId>
-    <name>Quarkus Jca - Documentation</name>
+    <artifactId>quarkus-ironjacamar-docs</artifactId>
+    <name>Quarkus IronJacamar - Documentation</name>
 
     <dependencies>
         <!-- Make sure the doc is built after the other artifacts -->
         <dependency>
-            <groupId>io.quarkiverse.jca</groupId>
-            <artifactId>quarkus-jca-deployment</artifactId>
+            <groupId>io.quarkiverse.ironjacamar</groupId>
+            <artifactId>quarkus-ironjacamar-deployment</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
@@ -67,7 +67,7 @@
                             <resources>
                                 <resource>
                                     <directory>${project.basedir}/../target/asciidoc/generated/config/</directory>
-                                    <include>quarkus-jca.adoc</include>
+                                    <include>quarkus-ironjacamar.adoc</include>
                                     <filtering>false</filtering>
                                 </resource>
                                 <resource>
