--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -3,12 +3,12 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>io.quarkiverse.jca</groupId>
-    <artifactId>quarkus-jca-parent</artifactId>
+    <groupId>io.quarkiverse.ironjacamar</groupId>
+    <artifactId>quarkus-ironjacamar-parent</artifactId>
     <version>999-SNAPSHOT</version>
   </parent>
-  <artifactId>quarkus-jca-integration-tests</artifactId>
-  <name>Quarkus Jca - Integration Tests</name>
+  <artifactId>quarkus-ironjacamar-integration-tests</artifactId>
+  <name>Quarkus IronJacamar - Integration Tests</name>
   <properties>
     <skipITs>true</skipITs>
   </properties>
@@ -26,8 +26,8 @@
 <!--      <artifactId>quarkus-hibernate-orm</artifactId>-->
 <!--    </dependency>-->
     <dependency>
-      <groupId>io.quarkiverse.jca</groupId>
-      <artifactId>quarkus-jca</artifactId>
+      <groupId>io.quarkiverse.ironjacamar</groupId>
+      <artifactId>quarkus-ironjacamar</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
