--- a/runtime/pom.xml
+++ b/runtime/pom.xml
@@ -3,12 +3,12 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>io.quarkiverse.jca</groupId>
-    <artifactId>quarkus-jca-parent</artifactId>
+    <groupId>io.quarkiverse.ironjacamar</groupId>
+    <artifactId>quarkus-ironjacamar-parent</artifactId>
     <version>999-SNAPSHOT</version>
   </parent>
-  <artifactId>quarkus-jca</artifactId>
-  <name>Quarkus Jca - Runtime</name>
+  <artifactId>quarkus-ironjacamar</artifactId>
+  <name>Quarkus IronJacamar - Runtime</name>
   <dependencies>
     <dependency>
       <groupId>io.quarkus</groupId>
