--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <quarkus.version>3.2.4.Final</quarkus.version>
+    <ironjacamar.version>3.0.4.Final</ironjacamar.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -36,6 +37,11 @@
         <version>${quarkus.version}</version>
         <type>pom</type>
         <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.jboss.ironjacamar</groupId>
+        <artifactId>ironjacamar-core-impl</artifactId>
+        <version>${ironjacamar.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
