--- a/.github/workflows/quarkus-snapshot.yaml
+++ b/.github/workflows/quarkus-snapshot.yaml
@@ -16,7 +16,7 @@ env:
   # Repo specific setting #
   #########################
 
-  ECOSYSTEM_CI_REPO_PATH: quarkiverse-jca
+  ECOSYSTEM_CI_REPO_PATH: quarkiverse-ironjacamar
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
