Introduce ResourceAdapterFactory and config

--- a/integration-tests/src/main/resources/application.properties
+++ b/integration-tests/src/main/resources/application.properties
@@ -1,2 +1,5 @@
-quarkus.index-dependency.artemis-ra.group-id=org.apache.activemq
-quarkus.index-dependency.artemis-ra.artifact-id=artemis-jakarta-ra
+quarkus.ironjacamar.ra.kind=artemis
+quarkus.ironjacamar.ra.config.connection-parameters=host=localhost;port=5445;protocols=HORNETQ
+quarkus.ironjacamar.ra.config.protocol-manager-factory=org.apache.activemq.artemis.core.protocol.hornetq.client.HornetQClientProtocolManagerFactory
+quarkus.ironjacamar.ra.config.user=guest
+quarkus.ironjacamar.ra.config.password=guest
