ConnectionFactory Injection works

--- a/integration-tests/src/main/resources/application.properties
+++ b/integration-tests/src/main/resources/application.properties
@@ -6,8 +6,8 @@ quarkus.ironjacamar.ra.config.password=guest
 
 
 
-quarkus.ironjacamar.other.ra.kind=artemis
-quarkus.ironjacamar.other.ra.config.connection-parameters=host=localhost;port=6445;protocols=HORNETQ
-quarkus.ironjacamar.other.ra.config.protocol-manager-factory=org.apache.activemq.artemis.core.protocol.hornetq.client.HornetQClientProtocolManagerFactory
-quarkus.ironjacamar.other.ra.config.user=guest2
-quarkus.ironjacamar.other.ra.config.password=guest2
+#quarkus.ironjacamar.other.ra.kind=artemis
+#quarkus.ironjacamar.other.ra.config.connection-parameters=host=localhost;port=6445;protocols=HORNETQ
+#quarkus.ironjacamar.other.ra.config.protocol-manager-factory=org.apache.activemq.artemis.core.protocol.hornetq.client.HornetQClientProtocolManagerFactory
+#quarkus.ironjacamar.other.ra.config.user=guest2
+#quarkus.ironjacamar.other.ra.config.password=guest2
