Moved tests to artemis-jms

--- a/integration-tests/artemis-jms/src/main/resources/application.properties
+++ b/integration-tests/artemis-jms/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 quarkus.ironjacamar.ra.kind=artemis
-quarkus.ironjacamar.ra.config.connection-parameters=host=localhost;port=5445;protocols=HORNETQ
-quarkus.ironjacamar.ra.config.protocol-manager-factory=org.apache.activemq.artemis.core.protocol.hornetq.client.HornetQClientProtocolManagerFactory
+quarkus.ironjacamar.ra.config.connection-parameters=host=localhost;port=61616;protocols=AMQP
+#quarkus.ironjacamar.ra.config.protocol-manager-factory=org.apache.activemq.artemis.core.protocol.hornetq.client.HornetQClientProtocolManagerFactory
 quarkus.ironjacamar.ra.config.user=guest
 quarkus.ironjacamar.ra.config.password=guest
 
