Support activation spec config

--- a/integration-tests/artemis-jms/src/main/resources/application.properties
+++ b/integration-tests/artemis-jms/src/main/resources/application.properties
@@ -4,7 +4,11 @@ quarkus.ironjacamar.ra.config.connection-parameters=host=localhost;port=61616;pr
 quarkus.ironjacamar.ra.config.user=guest
 quarkus.ironjacamar.ra.config.password=guest
 
-
+#Activation Configs
+quarkus.ironjacamar.activation-spec.myqueue.config.destination-type=jakarta.jms.Queue
+quarkus.ironjacamar.activation-spec.myqueue.config.destination=jms.queue.MyQueue
+quarkus.ironjacamar.activation-spec.myqueue.config.max-session=2
+quarkus.ironjacamar.activation-spec.myqueue.config.rebalance-connections=true
 
 #quarkus.ironjacamar.other.ra.kind=artemis
 #quarkus.ironjacamar.other.ra.config.connection-parameters=host=localhost;port=6445;protocols=HORNETQ
