Fix identifier resolution

--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -13,6 +13,7 @@
     <name>Quarkus IronJacamar - Integration Tests</name>
     <modules>
         <module>artemis-jms</module>
+        <module>multiple-artemis-jms</module>
         <module>reactive-messaging-artemis-jms</module>
     </modules>
     <properties>
