Minimize log output during tests

--- a/integration-tests/artemis-jms/src/main/resources/application.properties
+++ b/integration-tests/artemis-jms/src/main/resources/application.properties
@@ -9,3 +9,5 @@ quarkus.ironjacamar.activation-spec.myqueue.config.destination-type=jakarta.jms.
 quarkus.ironjacamar.activation-spec.myqueue.config.destination=jms.queue.MyQueue
 quarkus.ironjacamar.activation-spec.myqueue.config.max-session=2
 quarkus.ironjacamar.activation-spec.myqueue.config.rebalance-connections=true
+
+quarkus.log.category."org.apache.activemq.audit".level=WARN
