--- a/integration-tests/multiple-artemis-jms/src/main/resources/application.properties
+++ b/integration-tests/multiple-artemis-jms/src/main/resources/application.properties
@@ -16,3 +16,5 @@ quarkus.ironjacamar.other.ra.config.connection-parameters=host=localhost;port=61
 #quarkus.ironjacamar.other.ra.config.protocol-manager-factory=org.apache.activemq.artemis.core.protocol.hornetq.client.HornetQClientProtocolManagerFactory
 quarkus.ironjacamar.other.ra.config.user=guest
 quarkus.ironjacamar.other.ra.config.password=guest
+
+quarkus.log.category."org.apache.activemq.audit".level=WARN
