--- a/integration-tests/reactive-messaging-artemis-jms/src/main/resources/application.properties
+++ b/integration-tests/reactive-messaging-artemis-jms/src/main/resources/application.properties
@@ -19,3 +19,4 @@ mp.messaging.outgoing.inventory.connector=smallrye-jms
 mp.messaging.outgoing.inventory.destination=inventory
 mp.messaging.outgoing.inventory.destination-type=topic
 
+quarkus.log.category."org.apache.activemq.audit".level=WARN
