Fix detection of transacted message listener

--- a/integration-tests/artemis-jms/src/main/resources/application.properties
+++ b/integration-tests/artemis-jms/src/main/resources/application.properties
@@ -6,7 +6,7 @@ quarkus.ironjacamar.ra.config.password=guest
 
 #Activation Configs
 quarkus.ironjacamar.activation-spec.myqueue.config.destination-type=jakarta.jms.Queue
-quarkus.ironjacamar.activation-spec.myqueue.config.destination=jms.queue.MyQueue
+quarkus.ironjacamar.activation-spec.myqueue.config.destination=MyQueue
 quarkus.ironjacamar.activation-spec.myqueue.config.max-session=2
 quarkus.ironjacamar.activation-spec.myqueue.config.rebalance-connections=true
 
