--- a/integration-tests/artemis-jms/src/main/resources/application.properties
+++ b/integration-tests/artemis-jms/src/main/resources/application.properties
@@ -10,4 +10,13 @@ quarkus.ironjacamar.activation-spec.myqueue.config.destination=MyQueue
 quarkus.ironjacamar.activation-spec.myqueue.config.max-session=2
 quarkus.ironjacamar.activation-spec.myqueue.config.rebalance-connections=true
 
+quarkus.ironjacamar.activation-spec.sales.config.destination-type=jakarta.jms.Queue
+quarkus.ironjacamar.activation-spec.sales.config.destination=sales
+quarkus.ironjacamar.activation-spec.sales.config.max-session=2
+quarkus.ironjacamar.activation-spec.sales.config.rebalance-connections=true
+
 quarkus.log.category."org.apache.activemq.audit".level=WARN
+#quarkus.log.category."org.jboss.jca".level=TRACE
+#quarkus.log.category."org.jboss.jca".min-level=TRACE
+#quarkus.log.category."org.apache.activemq.artemis.ra".level=TRACE
+#quarkus.log.category."org.apache.activemq.artemis.ra".min-level=TRACE
