--- a/runtime/pom.xml
+++ b/runtime/pom.xml
@@ -76,6 +76,21 @@
               <artifactId>quarkus-extension-processor</artifactId>
               <version>${quarkus.version}</version>
             </path>
+            <path>
+              <groupId>org.jboss.logging</groupId>
+              <artifactId>jboss-logging</artifactId>
+              <version>3.5.1.Final</version>
+            </path>
+            <path>
+              <groupId>org.jboss.logging</groupId>
+              <artifactId>jboss-logging-processor</artifactId>
+              <version>2.2.1.Final</version>
+            </path>
+            <path>
+              <groupId>org.jboss.logging</groupId>
+              <artifactId>jboss-logging-annotations</artifactId>
+              <version>2.2.1.Final</version>
+            </path>
           </annotationProcessorPaths>
         </configuration>
       </plugin>
