Introduced ConnectionManager configuration

--- a/integration-tests/artemis-jms/src/main/resources/application.properties
+++ b/integration-tests/artemis-jms/src/main/resources/application.properties
@@ -4,6 +4,10 @@ quarkus.ironjacamar.ra.config.connection-parameters=host=localhost;port=61616;pr
 quarkus.ironjacamar.ra.config.user=guest
 quarkus.ironjacamar.ra.config.password=guest
 
+quarkus.ironjacamar.ra.connection-manager.pool.config.min-size=1
+quarkus.ironjacamar.ra.connection-manager.pool.config.max-size=1
+quarkus.ironjacamar.ra.connection-manager.pool.config.prefill=true
+
 #Activation Configs
 quarkus.ironjacamar.activation-spec.myqueue.config.destination-type=jakarta.jms.Queue
 quarkus.ironjacamar.activation-spec.myqueue.config.destination=MyQueue
