Expose pool metrics
- Introduces a `quarkus.ironjacamar.ra.connection-manager.pool.metrics.enabled` flag

--- a/integration-tests/artemis-jms/pom.xml
+++ b/integration-tests/artemis-jms/pom.xml
@@ -27,6 +27,10 @@
             <artifactId>quarkus-jdbc-postgresql</artifactId>
         </dependency>
         <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-micrometer-registry-prometheus</artifactId>
+        </dependency>
+        <dependency>
             <groupId>io.quarkiverse.ironjacamar</groupId>
             <artifactId>artemis-common</artifactId>
             <version>${project.version}</version>
