--- a/integration-tests/artemis-jms/src/main/resources/application.properties
+++ b/integration-tests/artemis-jms/src/main/resources/application.properties
@@ -4,16 +4,20 @@ quarkus.ironjacamar.ra.config.connection-parameters=host=localhost;port=61616;pr
 quarkus.ironjacamar.ra.config.user=guest
 quarkus.ironjacamar.ra.config.password=guest
 
+#Enable pool metrics
+quarkus.ironjacamar.ra.connection-manager.pool.metrics.enabled=true
 
 #Activation Configs
 quarkus.ironjacamar.activation-spec.myqueue.config.destination-type=jakarta.jms.Queue
 quarkus.ironjacamar.activation-spec.myqueue.config.destination=MyQueue
-quarkus.ironjacamar.activation-spec.myqueue.config.max-session=1
+#quarkus.ironjacamar.activation-spec.myqueue.config.destination=jms.queue.MyQueue
+quarkus.ironjacamar.activation-spec.myqueue.config.max-session=2
 quarkus.ironjacamar.activation-spec.myqueue.config.rebalance-connections=true
 
 quarkus.ironjacamar.activation-spec.sales.config.destination-type=jakarta.jms.Queue
 quarkus.ironjacamar.activation-spec.sales.config.destination=sales
-quarkus.ironjacamar.activation-spec.sales.config.max-session=1
+#quarkus.ironjacamar.activation-spec.sales.config.destination=jms.queue.sales
+quarkus.ironjacamar.activation-spec.sales.config.max-session=2
 quarkus.ironjacamar.activation-spec.sales.config.rebalance-connections=true
 
 quarkus.log.category."org.apache.activemq.audit".level=WARN
