Introduce global metrics flag
- Fixes #40

--- a/integration-tests/artemis-jms/src/main/resources/application.properties
+++ b/integration-tests/artemis-jms/src/main/resources/application.properties
@@ -5,7 +5,7 @@ quarkus.ironjacamar.ra.config.user=guest
 quarkus.ironjacamar.ra.config.password=guest
 
 #Enable pool metrics
-quarkus.ironjacamar.ra.cm.pool.metrics.enabled=true
+quarkus.ironjacamar.metrics.enabled=true
 
 #Activation Configs
 quarkus.ironjacamar.activation-spec.myqueue.config.destination-type=jakarta.jms.Queue
