Use IronJacamar's WorkManager and BootstrapContext implementation
- This gets rid of the original implementation I had for `jakarta.resource.spi.BootstrapContext` and `jakarta.resource.spi.work.WorkManager` and uses the implementations
provided by IronJacamar
- Fixes #43
- Initial work on #42

--- a/runtime/pom.xml
+++ b/runtime/pom.xml
@@ -23,6 +23,10 @@
       <artifactId>quarkus-narayana-jta</artifactId>
     </dependency>
     <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-smallrye-context-propagation</artifactId>
+    </dependency>
+    <dependency>
       <groupId>jakarta.resource</groupId>
       <artifactId>jakarta.resource-api</artifactId>
     </dependency>
