--- a/integration-tests/artemis-common/pom.xml
+++ b/integration-tests/artemis-common/pom.xml
@@ -10,6 +10,10 @@
     <artifactId>artemis-common</artifactId>
     <name>Quarkus IronJacamar - Artemis integration</name>
 
+    <properties>
+        <artemis.version>2.31.0</artemis.version>
+    </properties>
+
     <dependencies>
         <!-- Add deployment to hint the IDE to build it too -->
         <dependency>
@@ -25,12 +29,12 @@
         <dependency>
             <groupId>org.apache.activemq</groupId>
             <artifactId>artemis-jakarta-ra</artifactId>
-            <version>2.30.0</version>
+            <version>${artemis.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.activemq</groupId>
             <artifactId>artemis-hqclient-protocol</artifactId>
-            <version>2.30.0</version>
+            <version>${artemis.version}</version>
         </dependency>
     </dependencies>
     <build>
