Warn if @ResourceAdapterTypes is not specified

--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
         <artifactId>ironjacamar-core-impl</artifactId>
         <version>${ironjacamar.version}</version>
       </dependency>
+      <dependency>
+        <groupId>org.assertj</groupId>
+        <artifactId>assertj-core</artifactId>
+        <version>3.25.3</version>
+        <scope>test</scope>
+      </dependency>
     </dependencies>
   </dependencyManagement>
   <build>
