Start ConnectionValidator in the application startup

--- a/integration-tests/artemis-jms/src/main/resources/application.properties
+++ b/integration-tests/artemis-jms/src/main/resources/application.properties
@@ -4,6 +4,10 @@ quarkus.ironjacamar.ra.config.connection-parameters=host=localhost;port=61616;pr
 quarkus.ironjacamar.ra.config.user=guest
 quarkus.ironjacamar.ra.config.password=guest
 
+
+# Enable background validation
+quarkus.ironjacamar.ra.cm.pool.config.background-validation=true
+
 #Enable pool metrics
 quarkus.ironjacamar.metrics.enabled=true
 
