--- a/runtime/pom.xml
+++ b/runtime/pom.xml
@@ -54,6 +54,10 @@
           <groupId>org.jboss.ironjacamar</groupId>
           <artifactId>ironjacamar-common-spi</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>org.wildfly.transaction</groupId>
+          <artifactId>wildfly-transaction-client</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
   </dependencies>
