--- a/pom.xml
+++ b/pom.xml
@@ -57,12 +57,9 @@
           <version>${quarkus.version}</version>
         </plugin>
         <plugin>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <configuration>
-            <compilerArgs>
-              <arg>-parameters</arg>
-            </compilerArgs>
-          </configuration>
+          <groupId>io.quarkus</groupId>
+          <artifactId>quarkus-config-doc-maven-plugin</artifactId>
+          <version>${quarkus.version}</version>
         </plugin>
       </plugins>
     </pluginManagement>
