--- a/.github/workflows/release-perform.yml
+++ b/.github/workflows/release-perform.yml
@@ -10,6 +10,11 @@ on:
         description: 'Tag to release'
         required: true
 
+permissions:
+  attestations: write
+  id-token: write
+  contents: read
+
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
