--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -13,10 +13,23 @@
     <modules>
         <module>artemis-common</module>
         <module>artemis-jms</module>
+        <module>artemis-dev-classloader</module>
         <module>multiple-artemis-jms</module>
     </modules>
     <properties>
+        <quarkus.artemis.version>3.2.1</quarkus.artemis.version>
         <skipITs>true</skipITs>
     </properties>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>io.quarkiverse.artemis</groupId>
+                <artifactId>quarkus-artemis-bom</artifactId>
+                <version>${quarkus.artemis.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
 </project>
