--- a/.github/workflows/quarkus-snapshot.yaml
+++ b/.github/workflows/quarkus-snapshot.yaml
@@ -29,7 +29,7 @@ defaults:
 jobs:
   build:
     name: "Build against latest Quarkus snapshot"
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
 
     steps:
       - name: Set up Java
