Revert "Update quarkus-snapshot.yaml"
This reverts commit a9df8fa49b1914bacd068f8210e0dd4ecca82acf.

Revert "Update quarkus-snapshot.yaml"

This reverts commit 9679c088187b1e1cd4a42ea461c1edefef3f2967.

--- a/.github/workflows/quarkus-snapshot.yaml
+++ b/.github/workflows/quarkus-snapshot.yaml
@@ -29,7 +29,7 @@ defaults:
 jobs:
   build:
     name: "Build against latest Quarkus snapshot"
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
 
     steps:
       - name: Set up Java
@@ -46,7 +46,6 @@ jobs:
       - name: Checkout Ecosystem
         uses: actions/checkout@v4
         with:
-          ref: fix_script 
           repository: ${{ env.ECOSYSTEM_CI_REPO }}
           path: ecosystem-ci
 
