Add log4j2-jboss-logmanager dependency

--- a/integration-tests/artemis-common/pom.xml
+++ b/integration-tests/artemis-common/pom.xml
@@ -30,5 +30,9 @@
             <groupId>org.apache.activemq</groupId>
             <artifactId>artemis-hqclient-protocol</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.jboss.logmanager</groupId>
+            <artifactId>log4j2-jboss-logmanager</artifactId>
+        </dependency>
     </dependencies>
 </project>
