--- a/runtime/pom.xml
+++ b/runtime/pom.xml
@@ -78,11 +78,11 @@
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
+          <annotationProcessorPathsUseDepMgmt>true</annotationProcessorPathsUseDepMgmt>
           <annotationProcessorPaths>
             <path>
               <groupId>io.quarkus</groupId>
               <artifactId>quarkus-extension-processor</artifactId>
-              <version>${quarkus.version}</version>
             </path>
             <path>
               <groupId>org.jboss.logging</groupId>
