--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <tag>HEAD</tag>
   </scm>
   <properties>
-    <quarkus.version>3.30.0.CR1</quarkus.version>
+    <quarkus.version>3.30.2</quarkus.version>
     <ironjacamar.version>3.0.16.Final</ironjacamar.version>
   </properties>
   <dependencyManagement>
